--- a/app/views/tasks/history.html.erb
+++ b/app/views/tasks/history.html.erb
@@ -19,3 +19,24 @@
 <% else %> 
   <p>no history</p>
 <% end %>
+<br/><br/>
+<% reset_cycle() %>
+<h3>Statuses</h3>
+<div class="large-6">
+  <div class="row headerrow">
+    <div class="large-4 columns">Title</div>
+    <div class="large-4 columns">Due Date</div>
+    <div class="large-4 columns">Marked Completed Date</div>
+  </div>
+</div>
+<% @task.statuses.each do |s| %>
+  <% s.schedule.histories.all.each do |h| %>  
+    <div class="large-6">
+      <div class="row <%= cycle('oddrow', 'evenrow') %>">
+        <div class="large-4 columns"><%= s.title %></div>
+        <div class="large-4 columns"><%= l h.completed_for, format: :date_only %></div>
+        <div class="large-4 columns"><%= l h.updated_at, format: :long_dateweek %></div>
+      </div>
+    </div>
+  <% end %>
+<% end %>
