--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,5 +1,7 @@
 <h1>Listing categories</h1>
 
+<%= link_to 'New Category', new_category_path, class: 'button small' %>
+
 <table>
   <tr>
     <th>Name</th>
@@ -19,7 +21,3 @@
   </tr>
 <% end %>
 </table>
-
-<br />
-
-<%= link_to 'New Category', new_category_path %>
