--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -13,11 +13,11 @@
     <div class="small-1 columns">
       <strong>Admin</strong>
     </div>
-    <div class="small-2 columns"></div>
-    <div class="small-1 columns"></div>
+    <div class="small-1 columns">&nbsp;</div>
+    <div class="small-2 columns">&nbsp;</div>
   </div>
 
-<% @users.each do |user| %>
+  <% @users.each do |user| %>
   <div class="row <%= cycle('oddrow', 'evenrow') %>">
     <div class="small-4 columns">
       <%= link_to user.full_name, admin_edit_user_path(user.id), class:'lank' %> 
@@ -28,16 +28,16 @@
     <div class="small-1 columns">
       <%= user.admin? ? 'Yes' : 'No' %> 
     </div>
-    <div class="small-2 columns">
+    <div class="small-1 columns">
       <%= link_to "delete", admin_delete_user_path(user.id), method: :delete, 
           confirm: "Confirm. Delete will fail if user still has tasks assigned to them.",
           title: "Deleting #{user.full_name}"
       %>
     </div>
-    <div class="small-1 columns">
+    <div class="small-2 columns">
       <%= link_to user.access_locked? ? 'locked' : 'unlocked', admin_toogle_lock_path(user.id) %> 
     </div>
   </div>
-<% end %>
+  <% end %>
 </div>
 
