--- a/app/views/companies/_form.html.erb
+++ b/app/views/companies/_form.html.erb
@@ -17,10 +17,10 @@
       <%= f.text_field :name %>
     </div>
   </div>
-  <div class="large-4">
+  <div class="large-8">
     <div class="field">
       <%= f.label :info %><br />
-      <%= f.text_area :info %>
+      <%= f.cktext_area :info, class: 'ckeditor' %>
     </div>
   </div>
   <div class="large-12">
