--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -1,9 +1,9 @@
 <% content_for :title, @company.name %>
 <h1><%= @company.name %></h1>
 
-<div class="panel large-4">
-  <%= @company.info %>
+<div class="panel large-8">
+  <%= @company.info.html_safe %>
 </div>
 
-<%= link_to 'Edit', edit_company_path(@company) %> |
-<%= link_to 'Back', companies_path %>
+<%= link_to 'Edit', edit_company_path(@company), class: 'button small' %>
+<%= link_to 'Back', companies_path, class: 'button small' %>
