--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -41,7 +41,7 @@
   <div class="large-12">
     <div class="field">
       <%= f.label :info %><br />
-      <%= f.cktext_area :info %>
+      <%= f.cktext_area :info, class: 'ckeditor' %>
     </div>
   </div>
 
