--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -15,9 +15,9 @@
     <%= f.label :name %><br />
     <%= f.text_field :name %>
   </div>
-  <div class="field large-4">
+  <div class="field large-8">
     <%= f.label :description %><br />
-    <%= f.text_area :description %>
+    <%= f.cktext_area :description, class:'ckeditor' %>
   </div>
   <div class="actions large-4">
     <%= f.submit class: 'button small' %>
