--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,15 +1,14 @@
-<p id="notice"><%= notice %></p>
+<div id="notice"><%= notice %></div>
 
-<p>
+<div>
   <b>Name:</b>
   <%= @category.name %>
-</p>
+</div>
 
-<p>
+<div>
   <b>Description:</b>
-  <%= @category.description %>
-</p>
+  <%= @category.description.html_safe %>
+</div>
 
-
-<%= link_to 'Edit', edit_category_path(@category) %> |
-<%= link_to 'Back', categories_path %>
+<%= link_to 'Edit', edit_category_path(@category), class:'button small' %>
+<%= link_to 'Back', categories_path, class: 'button small' %>
