--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,86 +1,80 @@
 <h1>Listing tasks</h1>
 <% content_for :title, 'Tasks' %>
+<div>
+  <%= button_to 'New Task', new_task_path, :class => 'button small round', method: 'get' %>
+</div>
 
-<%= form_tag tasks_path, method: :get do %>
-  <div class="columns large-12">
-    <div class="columns large-3">
+<div class="panel small-7">
+  <div class="row">
+  <%= form_tag tasks_path, method: :get do %>
+    <div class="small-3 columns">
       <%= collection_select nil, :company_id, Company.order(:name), :id, :name, 
           {:include_blank => 'All Companies', selected: params[:company_id.to_s]} %> 
     </div>
-    <div class="columns large-3">
+    <div class="small-2 columns">
       <%= collection_select nil, :category_id, Category.order(:name), :id, :name, 
           {:include_blank => 'All Categories', selected: params[:category_id.to_s]} %> 
     </div>
-    <div class="columns large-3">
+    <div class="small-3 columns">
       <%= collection_select nil, :user_id, User.order(:last_name, :first_name), :id, :full_name, 
           {include_blank: 'All Users', selected: params[:user_id.to_s]} %> 
     </div>
-    <div class="columns large-2">
+    <div class="small-3 columns">
       <%= text_field_tag :search_text, params[:search_text] %>
     </div>
-    <div class="columns large-1">
-      <%= submit_tag 'Filter', name: nil %>
+    <div class="small-1 columns">
+      <%= submit_tag 'Filter', name: nil, class: 'button small' %>
     </div>
+  <% end %>
   </div>
-<% end %>
+</div>
 
-<br/><br/>
-
-<div class="large-12">
+<div class="small-6">
   <%= will_paginate @tasks %>
 </div>
 
-<table>
-  <thead>
-  <tr>
-    <th></th>
-    <th>Company</th>
-    <th>Category</th>
-    <th>Title</th>
-    <th>Owner</th>
-    <th>Schedule</th>
-    <th></th>
-  </tr>
-  </thead>
-  <tbody>
+<div class="small-6">
+  <div class="row headerrow">
+    <div class="small-1 columns">&nbsp;</div>
+    <div class="small-1 columns">Company</div>
+    <div class="small-1 columns">Category</div>
+    <div class="small-4 columns">Title</div>
+    <div class="small-2 columns">Owner</div>
+    <div class="small-2 columns">Schedule</div>
+    <div class="small-1 columns">&nbsp;</div>
+  </div>
 
-<% @tasks.each do |task| %>
-  <tr>
-    <td>
+  <div class="row">
+  <% @tasks.each do |task| %>
+    <div class="small-1 columns">
       <% if task.statuses.size > 0 %>
         <%= link_to('#', onclick: "toggle_tree('.subtask-#{task.id}', '#task-toggle-#{task.id}')") do %>
           <span id="task-toggle-<%=task.id%>" class="ui-icon ui-icon-triangle-1-e")></span>
         <% end %>
       <% end %>
-    </td>
-    <td><%= task.company.name %></td>
-    <td><%= task.category ? task.category.name : '' %></td>
-    <td><%= link_to task.title, task %></td>
-    <td><%= link_to task.user.full_name %></td>
-    <td><%= task.schedule %></td>
-    <td><%= link_to 'Destroy', task, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
-  <% task.statuses.each do |status| %>
-    <tr class="subtask-<%= task.id %>" style="display: none;">
-      <td></td>
-      <td></td>
-      <td></td>
-      <td><%= status.title %></td>
-      <td><%= status.user.full_name %></td>
-      <td><%= status.schedule %></td>
-      <td><%= link_to 'Destroy', task, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-    </tr>
+    </div>
+    <div class="small-1 columns"><%= task.company.name %></div>
+    <div class="small-1 columns"><%= task.category ? task.category.name : '' %></div>
+    <div class="small-4 columns"><%= link_to task.title, task %></div>
+    <div class="small-2 columns"><%= link_to task.user.full_name %></div>
+    <div class="small-2 columns"><%= task.schedule %></div>
+    <div class="small-1 columns"><%= link_to 'Destroy', task, method: :delete, data: { confirm: 'Are you sure?' } %></div>
+  </div>
+
+  <div class="row subtask-<%= task.id %>" style="display: none;">
+    <% task.statuses.each do |status| %>
+      <div class="small-1 columns">&nbsp;</div>
+      <div class="small-1 columns">&nbsp;</div>
+      <div class="small-1 columns">&nbsp;</div>
+      <div class="small-4 columns"><%= status.title %></div>
+      <div class="small-2 columns"><%= status.user.full_name %></div>
+      <div class="small-2 columns"><%= status.schedule %></div>
+      <div class="small-1 columns"><%= link_to 'Destroy', task, method: :delete, data: { confirm: 'Are you sure?' } %></div>
+    <% end %>
+  </div>
   <% end %>
-<% end %>
-</tbody>
-</table>
+</div>
 
 <div class="large-12">
   <%= will_paginate @tasks %>
 </div>
-
-<br />
-
-<%= button_to 'New Task', new_task_path, :class => 'button', method: 'get' %>
-
-<%= debug params %> 
