--- a/app/views/companies/_form.html.erb
+++ b/app/views/companies/_form.html.erb
@@ -5,7 +5,7 @@
 
       <ul>
       <% @company.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
+        <%= msg %><br/>
       <% end %>
       </ul>
     </div>
@@ -14,7 +14,7 @@
   <div class="large-4">
     <div class="field">
       <%= f.label :name %><br />
-      <%= f.text_field :name %>
+      <%= f.text_field :name, maxlength: myconfig(:max_title_size), size: myconfig(:max_title_size) %>
     </div>
   </div>
   <div class="large-8">
