--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -5,7 +5,7 @@
 
       <ul>
       <% @task.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
+        <%= msg %><br/>
       <% end %>
       </ul>
     </div>
@@ -34,7 +34,7 @@
   <div class="large-4">
     <div class="field">
       <%= f.label :title %>
-      <%= f.text_field :title %>
+      <%= f.text_field :title, maxlength: myconfig(:max_title_size), size: myconfig(:max_title_size) %>
     </div>
   </div>
 
