--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -71,7 +71,7 @@
       <p class="alert"><div class="alert-box alert round"><%= alert %></div></p>
       <%end%>
 
-      <%= yield %>
+      <div id="main-content"> <%= yield %> </div>
     </div>
 
     <!-- <script type='text/javascript'> -->
