--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -1170,6 +1170,8 @@ $row-width: 100%;
 // $switch-paddle-transition-ease: ease-out;
 // $switch-positive-color: lighten($success-color, 50%);
 // $switch-negative-color: #f5f5f5;
+$switch-positive-color: green;
+$switch-negative-color: red;
 
 // Outline Style for tabbing through switches
 
