--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -78,5 +78,7 @@
     <!--   var CKEDITOR_BASEPATH = '/assets/ckeditor/'; -->
     <!-- </script> -->
     <%= javascript_include_tag "application" %>
+    <div id="status-message"></div>
+    <div id="status-message-error"></div>
   </body>
 </html>
