reworked agenda. bug fixes. added breadcrumb titles

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Listing categories</h1>
+<%  content_for :crumbs,  '<strong>Listing categories</strong>'.html_safe %>
 
 <%= link_to 'New Category', new_category_path, class: 'button small' %>
 
