--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Companies</h1>
+<% c 'Companies' %>
 
 <%= button_to 'New Company', new_company_path, :class => 'button small round', method: 'get' %>
 
