--- a/app/views/deviser/password/edit.html.erb
+++ b/app/views/deviser/password/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Password Change</h1>
+<% c 'Password Change' %>
 
 <div class='large-4'>
   <%= form_for @user, url: update_password_path() do |f| %>
