--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -552,11 +552,11 @@ $row-width: 100%;
 
 // We use these to set various text styles for breadcrumbs.
 
-// $crumb-font-size: em-calc(11);
+$crumb-font-size: em-calc(15);
 // $crumb-font-color: $primary-color;
 // $crumb-font-color-current: #333;
 // $crumb-font-color-unavailable: #999;
-// $crumb-font-transform: uppercase;
+$crumb-font-transform: none;
 // $crumb-link-decor: underline;
 
 // We use these to control the slash between breadcrumbs
