--- a/app/views/admin/users/_form.html.erb
+++ b/app/views/admin/users/_form.html.erb
@@ -36,12 +36,12 @@
 </div>
 <div class="large-1">
   <label>Admin</label>
-  <div class="large-6 switch round">
+  <div class="large-8 switch round">
     <%= f.radio_button :admin, "false", id: "not_admin" %>
-    <%= f.label 'Off', for: 'not_admin' %>
+    <%= f.label 'Off', for: 'not_admin', class: 'light-text' %>
 
     <%= f.radio_button :admin, "true", id: "admin" %>
-    <%= f.label 'On', for: 'admin' %>
+    <%= f.label 'On', for: 'admin', class: 'light-text' %>
     <span></span>
   </div>
 </div>
