--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Edit User <%= @user.full_name %></h1>
+<% c "Edit User #{@user.full_name}" %>
 
 <%= form_for @user, url: admin_update_user_path do |f| %>
   <%= render partial: 'form', locals: {f: f} %>
