--- a/app/views/agenda/index.html.erb
+++ b/app/views/agenda/index.html.erb
@@ -1,18 +1,14 @@
 <% content_for :title, 'Agenda' %>
-<h1>
-  From 
-  <a id="start_date"><%= @start_date.to_s %></a>
-  to
-  <a id="end_date"><%= @end_date.to_s %></a>
-  for
-  <% if params[:show_all] %>
-    All
-  <% else %>
-    <%= current_user.full_name %>
-  <% end %>
-  </p>
-</h1>
+<% 
+  header = "From <span id='start_date'>#{@start_date.to_s}</span> to <span id='end_date'>#{@end_date.to_s}</span> for"
+  if params[:show_all]
+    header += " All"
+  else
+    header += " #{current_user.full_name}"
+  end
 
+  c header
+ %>
 <% if current_user.admin? %>
   <div class="panel">
     <%= form_tag agenda_url, id: 'view_all_form' do |f| %>
