sorting happening dates on agenda page

--- a/app/views/agenda/_agenda_list.html.erb
+++ b/app/views/agenda/_agenda_list.html.erb
@@ -3,7 +3,7 @@
     <p class="text-center"><strong>Stopped after a year of finding nothing.</strong></p>
   </div>
 <% else %>
-  <% @happenings.each do |date, reminders| %>
+  <% @happenings.sort.each do |date, reminders| %>
     <% curr_company = nil %>
     <div>
       <fieldset>
