--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,7 +36,7 @@
             <% end %>
             <% if user_signed_in? %>
               <li class="divider"></li>
-              <li><%= link_to "OverDue", overdue_path %></li>
+              <li><%= link_to "Overdue", overdue_path %></li>
             <% end %>
             <% if user_signed_in? && current_user.admin? %>
               <li class="divider"></li>
