--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,21 +38,25 @@
               <li class="divider"></li>
               <li><%= link_to "Overdue", overdue_path %></li>
             <% end %>
-            <% if user_signed_in? && current_user.admin? %>
-              <li class="divider"></li>
-              <li><%= link_to "Companies", companies_path %></li>
-              <li class="divider"></li>
-              <li><%= link_to "Categories", categories_path %></li>
-            <% end %>  
             <% if user_signed_in? %>
               <li class="divider"></li>
               <li><%= link_to "Tasks", tasks_path %></li>
             <% end %>  
-            <li class="divider"></li>
+            <% if user_signed_in? && current_user.admin? %>
+              <li class="divider"></li>
+              <li class="has-dropdown">
+                <a href="#">Admin</a>
+                <ul class="dropdown">
+                  <li><%= link_to "Companies", companies_path %></li>
+                  <li class="divider"></li>
+                  <li><%= link_to "Categories", categories_path %></li>
+                  <li class="divider"></li>
+                  <li><%= link_to 'Users', admin_show_users_path %></li>
+                </ul>
+              </li>
+            <% end %>  
             <% if user_signed_in? %>
-              <% if current_user.admin? %>
-                <li><%= link_to 'Users', admin_show_users_path %></li>
-              <% end %>
+              <li class="divider"></li>
               <li><%= link_to 'Change password', change_password_path %></li>
               <li><%= link_to "Sign Out (#{current_user.full_name})", destroy_user_session_path, method: :delete %></li>
             <% else %>
@@ -67,7 +71,6 @@
         </ul>
       <% end %>
     </div> 
-    <br/><br/><br/><br/>
     <div class="panel" style="background: white">
       <% if notice %>
       <p class="notice"><div class="alert-box success round"><%= notice %></div></p>
