--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -37,8 +37,7 @@
 <div class="row headerrow">
   <div class="small-4 columns">Title</div>
   <div class="small-4 columns">Company</div>
-  <div class="small-2 columns">Owner</div>
-  <div class="small-1 columns">Due Next</div>
+  <div class="small-3 columns">Owner</div>
   <div class="small-1 columns">&nbsp;</div>
 </div>
 
@@ -61,36 +60,45 @@
     </div>
   </div>
   <div class="small-4 columns"><%= task.company.name %></div>
-  <div class="small-2 columns"><%= task.user.full_name %></div>
-  <div class="small-1 columns"><%= short_date(task.schedule.next_occurrence) %></div>
+  <div class="small-3 columns"><%= task.user.full_name %></div>
   <div class="small-1 columns"><%= link_to 'Destroy', task, method: :delete, data: { confirm: 'Are you sure?' } %></div>
 </div>
 
 <div class="subtask-<%= task.id %> panel" style="display: none;">
   <div class="row">
-    <div class="large-1 text-right columns">
+    <div class="large-2 text-right columns">
       <strong>Company:</strong>
     </div>
-    <div class="large-11 columns"> 
+    <div class="large-10 columns"> 
       <%= task.company.name %>
     </div>
   </div>
   <div class="row">
-    <div class="large-1 text-right columns">
+    <div class="large-2 text-right columns">
       <strong>Category:</strong>
     </div>
-    <div class="large-11 columns"> 
+    <div class="large-10 columns"> 
       <%= task.category.name %>
     </div>
   </div>
   <div class="row">
-    <div class="large-1 text-right columns">
+    <div class="large-2 text-right columns">
       <strong>Statuses:</strong>
     </div>
-    <div class="large-11 columns"> 
+    <div class="large-10 columns"> 
       <%= task.statuses.length %>
     </div>
   </div>
+  <% if !task.schedule.next_occurrence.nil? %>
+  <div class="row">
+    <div class="large-2 text-right columns">
+      <strong>Next Due Date:</strong>
+    </div>
+    <div class="large-10 columns">
+      <%= l task.schedule.next_occurrence, format: :date_only %>
+    </div>
+  </div>
+  <% end %>
 </div>
 <%end%> <!-- end of task loop -->
 
