added missing title to pages

--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -1,3 +1,4 @@
+<% content_for :title, 'Users' %>
 <% c 'Admin Users' %>
 
 <%= link_to "New User", admin_new_user_path, class: "button small roun" %>
