--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -1,3 +1,4 @@
+<% content_for :title, 'Edit User' %>
 <% c "Edit User #{@user.full_name}" %>
 
 <%= form_for @user, url: admin_update_user_path do |f| %>
