--- a/app/views/admin/users/new.html.erb
+++ b/app/views/admin/users/new.html.erb
@@ -1,4 +1,5 @@
-<h1> New User</h1>
+<% content_for :title, 'New User' %>
+<% c 'New User' %>
 
 <%= form_for @user, url: admin_create_user_path do |f| %>
   <%= render partial: 'form', locals: {f: f} %>
