--- a/app/views/overdue/index.html.erb
+++ b/app/views/overdue/index.html.erb
@@ -1,6 +1,7 @@
 <% content_for :title, 'Overdue' %>
 <% c 'Overdue' %>
 <% cur_userid = nil %>
+
 <% if @overdue_tasks.empty? %>
   <div class="alert-box large-4">
     Nothing overdue.  
@@ -22,24 +23,16 @@
     <% odt.schedule.all_overdue().each do |od_date| %>
       <div id="<%= odt.schedule.id.to_s + '-' +l(od_date, format: :short_date_only) %>" class="row <%= cycle('oddrow', 'evenrow') %>" <%= hide_from_other_users(odt.user.id)%> >
         <div class="large-5 columns">
-          <%= odt.title %>
+          <%= "#{odt.title} for #{tors(odt).company.name}" %>
         </div>
         <div class="large-1 columns">
           <%= odt.instance_of?(Task) ? 'Task' : 'Status' %>
         </div>
         <div class="large-1 columns">
-          <% if odt.instance_of?(Task) %>
-            <%= link_to :view, task_path(odt.id) %>
-          <% else %>
-            <%= link_to :view, task_path(odt.task.id) %>
-          <% end %>
+          <%= link_to :view, task_path(tors(odt).id) %>
         </div>
         <div class="large-1 columns">
-          <% if odt.instance_of?(Task) %>
-            <%= link_to :clear, task_complete_path(odt.id, odt.schedule.id,  l(od_date, format: :short_date_only)), remote: true %>
-          <% else %>
-            <%= link_to :clear, task_complete_path(odt.task.id, odt.schedule.id, l(od_date, format: :short_date_only) ), remote: true %>
-          <% end %>
+          <%= link_to :clear, task_complete_path(tors(odt).id, odt.schedule.id,  l(od_date, format: :short_date_only)), remote: true %>
         </div>
         <div class="large-4 columns">
           <span style='color: red'><%= l od_date, format: :date_only %></span>
